added css flexbox styling

--- a/index.html
+++ b/index.html
@@ -7,56 +7,58 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="flex-containter">
+        <header>
+            <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#videos">Videos</a></li>
+                <li><a href="#team">Team</a></li>
+            </ul>
+            </nav>
+        </header>
 
-    <header>
-        <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#videos">Videos</a></li>
-            <li><a href="#team">Team</a></li>
-          </ul>
-        </nav>
-      </header>
-
-    <div class="hero">
-        <div class="offset-content go-left">
-            <h1>Trash Talk title goes here...</h1>
-            <button id="play-btn">Play Game</button>
+        <div class="hero">
+            <aside class="hero-description">
+                <h1>Trash Talk: Fighting towards Climate Justice...</h1>
+                <button id="play-btn">Play Game</button>
+            </aside>
+            <aside class="hero-media">
+                <img src="https://via.placeholder.com/468">
+            </aside>
         </div>
-        <div class="offset-media go-right">
-            <p>video or image goes here...</p>
+    
+        <div class="about">
+            <aside class="content-description">
+                <h2>What is Trash Talk?</h2>
+                <p>Trash Talk is an immersive PC/VR game created by the students of CUNY New York City College of Technology enrolled in Dominika’s Fall 2020 Technical Production course centered around achieving Climate Justice, globally and locally.</p>
+                <wbr>
+                <p>While exploring and listening to the environment, help orchestrate and clean the landscape by constructing sound sculptures and acoustic architectural structures.</p>
+                </aside>
+            <aside class="content-media">
+                <img src="https://via.placeholder.com/468">
+            </aside>
         </div>
-    </div>
+    
 
-    <div class="about">
-        <div class="offset-content go-right">
-            <h2>What is Trash Talk?</h2>
-            <p>Trash Talk is an immersive PC/VR game created by the students of CUNY New York City College of Technology enrolled in Dominika’s Fall 2020 Technical Production course.</p>
-            <wbr>
-            <p>While exploring and listening to the environment, help orchestrate and clean the landscape by constructing sound sculptures and acoustic architectural structures.</p>
+        <div class="videos">
+            <h2>View the videos from Trash Talk</h2>
+            <p>Insert videos here...</p>
         </div>
-        <div class="offset-media go-left">
-            <p>video or image goes here...</p>
+
+        <div class="team">
+            <h2>Meet the team behind Trash Talk</h2>
+            <h3>Audio Group</h3>
+            <h3>Management Group</h3>
+            <h3>Programmer Group</h3>
+            <h3>Video Group</h3>
         </div>
-    </div>
 
-    <div class="videos">
-        <h2>View the videos from Trash Talk</h2>
-        <p>Insert videos here...</p>
+        <footer>
+            <a href="/" target="_blank">Play Game on itch.io</a>
+            <p>© TrashTalk, 2020. Go Green!</p>
+        </footer>
     </div>
-
-    <div class="team">
-        <h2>Meet the team behind Trash Talk</h2>
-        <p>Audio Group</p>
-        <p>Management Group</p>
-        <p>Programmer Group</p>
-        <p>Video Group</p>
-    </div>
-
-    <footer>
-        <a href="/" target="_blank">Play Game (itch.io)</a>
-        <p>© TrashTalk, 2020. Go Green!</p>
-    </footer>
 </body>
 </html>
