added css font and hr line

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="about">
             <aside class="content-description">
                 <h2>What is Trash Talk?</h2>
-                <p>Trash Talk is an immersive PC/VR game created by the students of CUNY New York City College of Technology enrolled in Dominika’s Fall 2020 Technical Production course centered around achieving Climate Justice, globally and locally.</p>
-                <wbr>
+                <p>Trash Talk is an immersive PC/VR game created by the students of CUNY New York City College of Technology enrolled in Dominika Ksel’s Fall 2020 Technical Production course centered around achieving Climate Justice, globally and locally.</p>
+                <hr>
                 <p>While exploring and listening to the environment, help orchestrate and clean the landscape by constructing sound sculptures and acoustic architectural structures.</p>
                 </aside>
             <aside class="content-media">
@@ -56,7 +56,7 @@
         </div>
 
         <footer>
-            <a href="/" target="_blank">Play Game on itch.io</a>
+            <a href="/" target="_blank">Play TrashTalk on itch.io</a>
             <p>© TrashTalk, 2020. Go Green!</p>
         </footer>
     </div>
