added letter spacing

--- a/index.html
+++ b/index.html
@@ -49,10 +49,22 @@
 
         <div class="team">
             <h2>Meet the team behind Trash Talk</h2>
-            <h3>Audio Group</h3>
-            <h3>Management Group</h3>
-            <h3>Programmer Group</h3>
-            <h3>Video Group</h3>
+            <div id="audio">
+                <h3>Audio Group</h3>
+                <p>insert audio text here...</p>
+            </div>
+            <div id="mgmt">
+                <h3>Management Group</h3>
+                <p>insert management text here...</p>
+            </div>
+            <div id="programmer">
+                <h3>Programmer Group</h3>
+                <p>insert programmer text here...</p>
+            </div>
+            <div id="video">
+                <h3>Video Group</h3>
+                <p>insert video text here...</p>
+            </div>
         </div>
 
         <footer>
