added flexbox to teams and videos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="hero">
             <aside class="hero-description">
-                <h1>Trash Talk: Fighting towards Climate Justice...</h1>
+                <h1>Trash Talk: Creatively Fighting for Social Change...</h1>
                 <button id="play-btn">Play Game</button>
             </aside>
             <aside class="hero-media">
@@ -44,27 +44,38 @@
 
         <div class="videos">
             <h2>View the videos from Trash Talk</h2>
-            <p>Insert videos here...</p>
+            <section>
+                <h3>Video One</h3>
+                <p>Insert videos here...</p>
+            </section>
+            <section>
+                <h3>Video Two</h3>
+                <p>Insert videos here...</p>
+            </section>
+            <section>
+                <h3>Video Three</h3>
+                <p>Insert videos here...</p>
+            </section>
         </div>
 
         <div class="team">
             <h2>Meet the team behind Trash Talk</h2>
-            <div id="audio">
+            <section id="audio">
                 <h3>Audio Group</h3>
                 <p>insert audio text here...</p>
-            </div>
-            <div id="mgmt">
+            </section>
+            <section id="mgmt">
                 <h3>Management Group</h3>
                 <p>insert management text here...</p>
-            </div>
-            <div id="programmer">
+            </section>
+            <section id="programmer">
                 <h3>Programmer Group</h3>
                 <p>insert programmer text here...</p>
-            </div>
-            <div id="video">
+            </section>
+            <section id="video">
                 <h3>Video Group</h3>
                 <p>insert video text here...</p>
-            </div>
+            </section>
         </div>
 
         <footer>
