edited hero description

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="hero">
             <aside class="hero-description">
-                <h1>Trash Talk: Creatively Fighting for Social Change...</h1>
+                <h1>Trash Talk: The intersection of art, storytelling and Urban Climate Justice</h1>
                 <button id="play-btn">Play Game</button>
             </aside>
             <aside class="hero-media">
