--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="hero">
             <aside class="hero-description">
-                <h1>Trash Talk: The intersection of art, storytelling and Urban Climate Justice</h1>
+                <h1>Trash Talk: The intersection of art, storytelling, and play for Environmental Climate Justice</h1>
                 <button id="play-btn">Play Game</button>
             </aside>
             <aside class="hero-media">
@@ -32,7 +32,7 @@
         <div class="about">
             <aside class="content-description">
                 <h2>What is Trash Talk?</h2>
-                <p>Trash Talk is an immersive PC/VR game created by the students of CUNY New York City College of Technology enrolled in Dominika Ksel’s Fall 2020 Technical Production course centered around achieving Climate Justice, globally and locally.</p>
+                <p>Trash Talk is an immersive multi-media project created by the students of CUNY New York City College of Technology enrolled in Dominika Ksel’s Fall 2020 Technical Production course centered around achieving Climate Justice, globally and locally. The game was made for PC/VR devices and is intended to spread awareness of climate change with the participation of those currently fighting against the economic and social justice systems.</p>
                 <hr>
                 <p>While exploring and listening to the environment, help orchestrate and clean the landscape by constructing sound sculptures and acoustic architectural structures.</p>
                 </aside>
@@ -81,6 +81,7 @@
         <footer>
             <a href="/" target="_blank">Play TrashTalk on itch.io</a>
             <p>© TrashTalk, 2020. Go Green!</p>
+            <h6 id="thanks">Thanks to Amber Payne, Lou Harris, Maxi Cohen, Rachel Shragis, Rayner Ramirez, Saylor Pochan, Sto Len</h6>
         </footer>
     </div>
 </body>
