--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </ul>
             </nav>
         </header>
-
-        <div class="hero">
+        <div id="home"></div>
+        <div id="hero">
             <aside class="hero-description">
                 <h1>Trash Talk: The intersection of art, storytelling, and play for Environmental Climate Justice</h1>
                 <button id="play-btn">Play Game</button>
@@ -28,8 +28,8 @@
                 <img src="https://via.placeholder.com/468">
             </aside>
         </div>
-    
-        <div class="about">
+
+        <div id="about">
             <aside class="content-description">
                 <h2>What is Trash Talk?</h2>
                 <p>Trash Talk is an immersive multi-media project created by the students of CUNY New York City College of Technology enrolled in Dominika Ksel’s Fall 2020 Technical Production course centered around achieving Climate Justice, globally and locally. The game was made for PC/VR devices and is intended to spread awareness of climate change with the participation of those currently fighting against the economic and social justice systems.</p>
@@ -40,9 +40,7 @@
                 <img src="https://via.placeholder.com/468">
             </aside>
         </div>
-    
-
-        <div class="videos">
+        <div id="videos">
             <h2>View the videos from Trash Talk</h2>
             <section>
                 <h3>Video One</h3>
@@ -57,8 +55,7 @@
                 <p>Insert videos here...</p>
             </section>
         </div>
-
-        <div class="team">
+        <div id="team">
             <h2>Meet the team behind Trash Talk</h2>
             <section id="audio">
                 <h3>Audio Group</h3>
@@ -77,7 +74,6 @@
                 <p>insert video text here...</p>
             </section>
         </div>
-
         <footer>
             <a href="/" target="_blank">Play TrashTalk on itch.io</a>
             <p>© TrashTalk, 2020. Go Green!</p>
