--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="hero">
             <aside class="hero-description">
         </aside>
-                <h1>Trash Talk: The intersection of art, storytelling, and play for Environmental Climate Justice</h1>
+                <h1>Urban Climate Justice: A VR Exploratorium</h1>
                 <button id="play-btn">Play Game</button>
             <aside class="hero-media">
         </aside>
