added team formatting

--- a/index.html
+++ b/index.html
@@ -100,33 +100,52 @@
 
       <div id="team">
         <h2>Meet the team behind Trash Talk</h2>
+        <p>
+          Creative Director - Dominika Ksel
+          <br>Technical Supervisor - Lee Favorite
+          <br>Lead Web Designer - Shanice Smith
+          <br>City Tech CLT - Kenny Chiu
+        </p>
         <section id="audio">
-          <h3>Audio Group</h3>
+          <h3>The Sound Designers</h3>
           <p>insert audio text here...</p>
         </section>
         <section id="mgmt">
-          <h3>Management Group</h3>
+          <h3>The Product Managers</h3>
           <p>insert management text here...</p>
         </section>
         <section id="programmer">
-          <h3>Programmer Group</h3>
+          <h3>The Programmers</h3>
           <p>insert programmer text here...</p>
         </section>
         <section id="video">
-          <h3>Video Group</h3>
+          <h3>The 3D Designers</h3>
           <p>insert video text here...</p>
+        </section>
+        <section>
+          <h3>Interviews</h3>
+          <p>
+            <span class="team-description">These individuals kindly shared their stories and knowledge regarding their experiences as environmental and social justice advocates, allowing us to accurately craft this project.
+            </span>
+            <ul>
+            <li>Maxi Cohen</li>
+            <li>Dioganhdih</li>
+            <li>Lou Harris</li>
+            <li>Sto Len</li>
+            <li>Amber Payne</li>
+            <li>Saylor Pochan</li>
+            <li>Rayner Ramirez</li>
+            <li>Rachel Shragis</li>
+          </ul>
+          </p>
         </section>
       </div>
 
       <footer>
         <a href="/" target="_blank">Play TrashTalk on itch.io</a>
         <p>© TrashTalk, 2020. Go Green!</p>
-        <h6 id="thanks">
-          Thanks to Amber Payne, Lou Harris, Maxi Cohen, Rachel Shragis, Rayner
-          Ramirez, Saylor Pochan, Sto Len
-        </h6>
       </footer>
-      
+
     </div>
   </body>
 </html>
