added team descriptions

--- a/index.html
+++ b/index.html
@@ -101,32 +101,49 @@
       <div id="team">
         <h2>Meet the team behind Trash Talk</h2>
         <p>
-          Creative Director - Dominika Ksel
-          <br>Technical Supervisor - Lee Favorite
-          <br>Lead Web Designer - Shanice Smith
-          <br>City Tech CLT - Kenny Chiu
+          <ul>
+            <li>Creative Director - Dominika Ksel</li>
+            <li>Technical Supervisor - Lee Favorite</li>
+            <li>Lead Web Designer - Shanice Smith</li>
+            <li>City Tech CLT - Kenny Chiu</li>
+          </ul>
         </p>
         <section id="audio">
           <h3>The Sound Designers</h3>
-          <p>insert audio text here...</p>
+          <p>
+            <span class="team-description">
+              This team curated all of the sound effects heard throughout the game, including the ambient noises of the ocean and subtle sounds played upon picking up trash.
+            </span>
+            insert audio text here...</p>
         </section>
         <section id="mgmt">
           <h3>The Product Managers</h3>
-          <p>insert management text here...</p>
+          <p>
+            <span class="team-description">
+              This team oversaw the general aspects of the project, and provided assistance to other groups in order to get necessary tasks completed in time. 
+            </span>
+            insert management text here...</p>
         </section>
         <section id="programmer">
           <h3>The Programmers</h3>
-          <p>insert programmer text here...</p>
+          <p>
+            <span class="team-description">
+              This team worked on creating the scripts needed for the game’s player mechanics, including player movement, the ability to grab objects, and more.
+            </span>
+            insert programmer text here...</p>
         </section>
         <section id="video">
           <h3>The 3D Designers</h3>
-          <p>insert video text here...</p>
+          <p>
+            <span class="team-description">
+              This duo designed and developed the environment of the game using the Unity game engine. They implemented various 3D objects, materials, and other assets to create this world. 
+            </span>
+            insert video text here...</p>
         </section>
         <section>
           <h3>Interviews</h3>
           <p>
-            <span class="team-description">These individuals kindly shared their stories and knowledge regarding their experiences as environmental and social justice advocates, allowing us to accurately craft this project.
-            </span>
+            <span class="team-description">These individuals kindly shared their stories and knowledge regarding their experiences as environmental and social justice advocates, allowing us to accurately craft this project.</span>
             <ul>
             <li>Maxi Cohen</li>
             <li>Dioganhdih</li>
