--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div id="hero">
         <aside class="hero-description"></aside>
-        <h1>Urban Climate Justice: A VR Exploratorium</h1>
+        <h1>Trash Talk: A VR Exploratorium</h1>
         <button id="play-btn">Play Game</button>
       </div>
 
@@ -59,6 +59,7 @@
       </div>
 
       <div id="videos">
+        <h2>Contemplating Urban Environments</h2>
         <iframe
           width="420"
           height="315"
