added team info

--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
             <span class="team-description">
               This team curated all of the sound effects heard throughout the game, including the ambient noises of the ocean and subtle sounds played upon picking up trash.
             </span>
-            insert audio text here...</p>
+            <ul>
+              <li>Kenji Cano</li>
+              <li>Sahan Jayalath</li>
+              <li>Odalys Sanchez</li>
+              <li>Justin Philip</li>
+            </ul>
+          </p>
         </section>
         <section id="mgmt">
           <h3>The Product Managers</h3>
@@ -123,7 +129,13 @@
             <span class="team-description">
               This team oversaw the general aspects of the project, and provided assistance to other groups in order to get necessary tasks completed in time. 
             </span>
-            insert management text here...</p>
+            <ul>
+              <li>Hiuling Yen</li>
+              <li>Patrick Rufino</li>
+              <li>Giancarlo Macias</li>
+              <li>Renuka Sookdeosingh</li>
+            </ul>
+            </p>
         </section>
         <section id="programmer">
           <h3>The Programmers</h3>
@@ -131,7 +143,13 @@
             <span class="team-description">
               This team worked on creating the scripts needed for the game’s player mechanics, including player movement, the ability to grab objects, and more.
             </span>
-            insert programmer text here...</p>
+            <ul>
+              <li>Edwin Bishop</li>
+              <li>Shanice Smith</li>
+              <li>Nicholas Ramdin</li>
+              <li>Edwin Samaniego</li>
+            </ul>
+          </p>
         </section>
         <section id="video">
           <h3>The 3D Designers</h3>
@@ -139,7 +157,11 @@
             <span class="team-description">
               This duo designed and developed the environment of the game using the Unity game engine. They implemented various 3D objects, materials, and other assets to create this world. 
             </span>
-            insert video text here...</p>
+            <ul>
+              <li>Julian Frost</li>
+              <li>Bryan Pierre-Louis</li>
+            </ul>
+          </p>
         </section>
         <section>
           <h3>Interviews</h3>
