removed the team ids

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trash Talk: The Game</title>
+    <title>TrashTalk: The Game</title>
     <link rel="stylesheet" href="css/main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -35,14 +35,14 @@
 
       <div id="hero">
         <aside class="hero-description"></aside>
-        <h1>Trash Talk: A VR Exploratorium</h1>
+        <h1>TrashTalk: A VR Exploratorium</h1>
         <button id="play-btn">Play Game</button>
       </div>
 
       <div id="about">
         <h2>What is Trash Talk?</h2>
         <p>
-          Trash Talk is an immersive multi-media project created by the students
+          TrashTalk is an immersive multi-media project created by the students
           of CUNY New York City College of Technology enrolled in Dominika
           Ksel’s Fall 2020 Technical Production course centered around achieving
           Climate Justice, globally and locally. The game was made for PC/VR
@@ -100,7 +100,7 @@
       </div>
 
       <div id="team">
-        <h2>Meet the team behind Trash Talk</h2>
+        <h2>Meet the team behind TrashTalk</h2>
         <p>
           <ul>
             <li>Creative Director - Dominika Ksel</li>
@@ -109,7 +109,7 @@
             <li>City Tech CLT - Kenny Chiu</li>
           </ul>
         </p>
-        <section id="audio">
+        <section>
           <h3>The Sound Designers</h3>
           <p>
             <span class="team-description">
@@ -123,7 +123,7 @@
             </ul>
           </p>
         </section>
-        <section id="mgmt">
+        <section>
           <h3>The Product Managers</h3>
           <p>
             <span class="team-description">
@@ -137,7 +137,7 @@
             </ul>
             </p>
         </section>
-        <section id="programmer">
+        <section>
           <h3>The Programmers</h3>
           <p>
             <span class="team-description">
@@ -151,7 +151,7 @@
             </ul>
           </p>
         </section>
-        <section id="video">
+        <section>
           <h3>The 3D Designers</h3>
           <p>
             <span class="team-description">
