--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <div id="home"></div>
 
       <div id="hero">
-        <aside class="hero-description"></aside>
-        <h1>TrashTalk: A VR Exploratorium</h1>
-        <button id="play-btn">Play Game</button>
+        <div id="hero-text">
+          <h1>TrashTalk: A VR Exploratorium</h1>
+          <button id="play-btn">Play Game</button>
+        </div>
       </div>
 
       <div id="about">
@@ -66,7 +67,7 @@
           src="https://www.youtube.com/embed/AjWfY7SnMBI"
         >
         </iframe>
-      </div>
+      
       <div id="videoSliderNav">
         <ul id="videoNav">
           <li
@@ -98,6 +99,7 @@
           </li>
         </ul>
       </div>
+    </div>
 
       <div id="team">
         <h2>Meet the team behind TrashTalk</h2>
