--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
         </p>
       </div>
       <!-- DO NOT TOUCH THIS -->
-      <div id="video">
+      <div id="videos">
         <h2>Contemplating Urban Environments</h2>
+      </div>
+      <div id="video">
+        
         <iframe
           width="420"
           height="315"
