added gameplay title

--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
         <p>
           TrashTalk is an immersive multi-media project created by the students
           of CUNY New York City College of Technology enrolled in Dominika
-          Ksel’s Fall 2020 Technical Production course centered around achieving
-          Climate Justice, globally and locally. The game was made for PC/VR
+          Ksel’s Fall 2020 Technical Production course centered around
+          Climate Justice on a global and local scale. The game was made for PC/VR
           devices and is intended to spread awareness of climate change with the
           participation of those currently fighting against the economic and
           social justice systems.
         </p>
         <hr />
+        <h3>Gameplay and Instructions</h3>
         <p>
           While exploring and listening to the environment, help orchestrate and
           clean the landscape by constructing sound sculptures and acoustic
