--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         let videoSelection = selected;
         document.getElementById(
           "video"
-        ).innerHTML = `<iframe width="420" height="315" src=${videoSelection}>
+        ).innerHTML = `<iframe width="640" height="340" src=${videoSelection}>
           </iframe>`;
       };
     </script>
@@ -65,9 +65,9 @@
       <div id="video">
         
         <iframe
-          width="420"
-          height="315"
-          src="https://www.youtube.com/embed/AjWfY7SnMBI"
+          width="640"
+          height="340"
+          src="https://player.vimeo.com/video/470055878"
         >
         <!-- CHANGE THE DEFAULT video here -->
         </iframe>
