added gameplay instructions

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
           While exploring and listening to the environment, help orchestrate and
           clean the landscape by constructing sound sculptures and acoustic
           architectural structures.
+          <br>
+          <ul class="list-items">
+            <li>Walk: WASD/arrow keys</li>
+            <li>Jump: Spacebar</li>
+            <li>Camera view: Move mouse</li>
+            <li>Grab trash: Hold left mouse button</li>
+            <li>Release trash: Release left mouse button</li>
+          </ul>
         </p>
       </div>
       <!-- DO NOT TOUCH THIS -->
@@ -112,7 +120,7 @@
       <div id="team">
         <h2>Meet the team behind TrashTalk</h2>
         <p>
-          <ul>
+          <ul class="list-items">
             <li>Creative Director - Dominika Ksel</li>
             <li>Technical Supervisor - Lee Favorite</li>
             <li>Lead Web Designer - Shanice Smith</li>
@@ -125,7 +133,7 @@
             <span class="team-description">
               This team curated all of the sound effects heard throughout the game, including the ambient noises of the ocean and subtle sounds played upon picking up trash.
             </span>
-            <ul>
+            <ul class="list-items">
               <li>Kenji Cano</li>
               <li>Sahan Jayalath</li>
               <li>Odalys Sanchez</li>
@@ -138,7 +146,7 @@
             <span class="team-description">
               This team oversaw the general aspects of the project, and provided assistance to other groups in order to get necessary tasks completed in time.
             </span>
-            <ul>
+            <ul class="list-items">
               <li>Hiuling Yen</li>
               <li>Patrick Rufino</li>
               <li>Giancarlo Macias</li>
@@ -151,7 +159,7 @@
             <span class="team-description">
               This team worked on creating the scripts needed for the game’s player mechanics, including player movement, the ability to grab objects, and more.
             </span>
-            <ul>
+            <ul class="list-items">
               <li>Edwin Bishop</li>
               <li>Shanice Smith</li>
               <li>Nicholas Ramdin</li>
@@ -164,7 +172,7 @@
             <span class="team-description">
               This duo designed and developed the environment of the game using the Unity game engine. They implemented various 3D objects, materials, and other assets to create this world.
             </span>
-            <ul>
+            <ul class="list-items">
               <li>Julian Frost</li>
               <li>Bryan Pierre-Louis</li>
             </ul>
@@ -173,15 +181,15 @@
           <h3>Interviews</h3>
           <p>
             <span class="team-description">These individuals kindly shared their stories and knowledge regarding their experiences as environmental and social justice advocates, allowing us to accurately craft this project.</span>
-            <ul>
-            <li>Maxi Cohen</li>
-            <li>Dioganhdih</li>
-            <li>Lou Harris</li>
-            <li>Sto Len</li>
-            <li>Amber Payne</li>
-            <li>Saylor Pochan</li>
-            <li>Rayner Ramirez</li>
-            <li>Rachel Shragis</li>
+            <ul class="list-items">
+              <li>Maxi Cohen</li>
+              <li>Dioganhdih</li>
+              <li>Lou Harris</li>
+              <li>Sto Len</li>
+              <li>Amber Payne</li>
+              <li>Saylor Pochan</li>
+              <li>Rayner Ramirez</li>
+              <li>Rachel Shragis</li>
           </ul>
           </p>
 
