added class videos

--- a/index.html
+++ b/index.html
@@ -89,29 +89,29 @@
         <ul id="videoNav">
           <li
             id="videoUrl"
-            onclick="getVideoUrl('https://www.youtube.com/embed/AjWfY7SnMBI')"
+            onclick="getVideoUrl('https://player.vimeo.com/video/474506646')"
           >
             <img
-              src="https://via.placeholder.com/200"
-              alt="Video 1 Goes Here"
+              src="https://player.vimeo.com/video/474506646"
+              alt="Climate Justice - The Present"
             />
           </li>
           <li
             id="videoUrl"
-            onclick="getVideoUrl('https://www.youtube.com/embed/nMfPqeZjc2c')"
+            onclick="getVideoUrl('https://www.youtube.com/embed/_ka--wpVilA')"
           >
             <img
-              src="https://via.placeholder.com/200"
-              alt="Video 2 Goes Here"
+              src="https://www.youtube.com/embed/_ka--wpVilA"
+              alt="The Solution"
             />
           </li>
           <li
             id="videoUrl"
-            onclick="getVideoUrl('https://www.youtube.com/embed/dQw4w9WgXcQ')"
+            onclick="getVideoUrl('https://player.vimeo.com/video/478016711')"
           >
             <img
-              src="https://via.placeholder.com/200"
-              alt="Video 3 Goes Here"
+              src="https://player.vimeo.com/video/478016711"
+              alt="The Problem"
             />
           </li>
         </ul>
