added future justice to nav

--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
         <ul id="videoNav">
           <li
             id="videoUrl"
+            onclick="getVideoUrl('https://player.vimeo.com/video/470055878')"
+          >
+            <img
+              src="https://player.vimeo.com/video/470055878"
+              alt="Future Justice"
+            />
+          </li>
+          <li
+            id="videoUrl"
             onclick="getVideoUrl('https://player.vimeo.com/video/474506646')"
           >
             <img
